Correct whitespace and layout styles

--- a/app/assets/stylesheets/todo_items.css.scss
+++ b/app/assets/stylesheets/todo_items.css.scss
@@ -1,20 +1,11 @@
-// Place all the styles related to the todo_items controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-#pending-items tr td {
-  line-height:.7rem;
-}
-
 .back-button {
   width:30px;
   background-color:rgba(0,0,0,.1);
   margin-bottom:10px;
-  border-radius:20%;
+  border-radius:5%;
   padding-bottom:5px;
   a {
-    padding:5px 0;
-    margin-left:5px;
+    padding:0 5px;
     color:gray;
     font-size:2rem;
     font-weight:bold;
