--- a/app/assets/stylesheets/todo_lists.css.scss
+++ b/app/assets/stylesheets/todo_lists.css.scss
@@ -1,9 +1,11 @@
-// Place all the styles related to the todo_lists controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.new-list {
+  display:block;
+  float:left;
+  width:100%;
+}
 
-#todo-lists {
-	width:100%;
+#todo-lists, #completed-lists {
+  width:100%;
   td {
     text-align:center;
     &:first-child {
